# SQL-college-project

./: .gitignore  MISSION.org  Makefile.am  README.md  README.org  configure.ac
docs/diagram/: Makefile.am  diagram.tex
src/: Makefile.am  callbacks.c  callbacks.h  context.c  context.h  main.c  sql.c  sql.h  sql_commands.c  sql_commands.h  utils.c  utils.h  widgets.c  widgets.h
